--- a/lab1_halaman2.html
+++ b/lab1_halaman2.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Halaman 2</title>
 </head>
 <body>
-
-<h1>Ini Halaman Kedua</h1>
-<p>Halaman ini adalah halaman kedua dari praktikum HTML dasar.</p>
-
-<a href="lab1_tag_dasar.html">Kembali ke Halaman Utama</a>
-
+    <h1>Ini adalah Halaman 2</h1>
+    <p>Sekarang kita sedang mempelajari dasar-dasar HTML di mata kuliah Pemrograman Web. 
+        Pada pertemuan pertama ini, kita berlatih membuat halaman web sederhana 
+        menggunakan beberapa tag HTML dasar.
+    </p>Paragraf merupakan sekumpulan kalimat yang tersusun rapi dan saling berkaitan sehingga 
+        membentuk satu gagasan utama. Untuk menuliskan paragraf dalam HTML, digunakan elemen khusus 
+        yang berfungsi mengatur teks agar lebih terstruktur.</p>
+    <a href="lab1_tag_dasar.html">Kembali ke Halaman Utama</a>
 </body>
 </html>
